test_translator/tests/data/checkpoint_1/errors/15_malformed_syntax/tests.py
# Malformed Python syntax - missing closing paren
assert func(1, 2 == 3
assert func(3) == 4
